--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!Doctype html>
+<!doctype html>
 <html lang="en-us">
 
 <head>
   <meta charset="UTF-8">
   <title>About | Your Name</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale"=1>
 </head>
 
 <body>
@@ -24,13 +25,13 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+      <img id="bio-image" src="assets/images/profile-image.JPG" width="300px" height="300px" alt="Kristian Neely">
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
+      <p>I am currently living in Berea, Ohio, and graduated from Notre Dame College in May 2018, located in South Euclid, Ohio. I earned my Bachelor of Arts Degree in Management Information Systems and have an interest in the field of Web Development and Cyber Security. Prior to College, I attended Trinity High School, where I was introduced to the technology field through their internship programs of: Information Technology, Graphic Design, Medical, and College Career readiness. I completed Trinity’s Information Technology Program which included the Hardware side of computers and obtained my CompTIA A+ Certification. In addition, three yearly internships: first at Trinity High School, second year at St. Bridget’s Elementary School in Parma, and third year at the Cleveland Museum of Art. In College, I was introduced to Web Development through my work study job with the Web Development Team where I started to get exposure to coding and the basics. After my Notre Dame College Web Development/Graphic Design Internship at the Kelvin Smith Library of Case Western University, I wanted to expand my knowledge in coding by attending the Case Western Coding Bootcamp where I will learn to become a better and more experienced coder and use these new skills to enhance my career choices.</p>
+        
+            <br>
 
-      <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
-
-      <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+      <p>Some of my hobbies include traveling, downhill snow skiing, coding, playing the Alto Saxophone, spending time with friends, and exercise. I enjoy watching sports and played Ice Hockey throughout my childhood until college. During High School and College, I was part of the marching band as well as concert band. During my freshman year of College, I was part of the Notre Dame College Indoor Winds Ensemble, a separate group representing the college who competed against other groups around Ohio to later make it to WGI World Championships in Dayton. <a href="https://wgi.org/"><strong><u>WGI</u></strong></a> is a traveling competition of indoor marching bands throughout the world, where one is judged for overall performance, music, uniqueness, and physical technique.</p>
 
     </section>
 
