added link to jquery and javascript homeoworks under the potfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,14 +26,16 @@
       <h1>Portfolio</h1>
 
       <div class="work">
+        <a href="https://kneely13.github.io/Word-Guess-Game">
         <img src="assets/images/grilled-korian-burger.jpg" alt="Word Guess">
-        
-        <h3>Word Guess</h3>
+        <h3>Hangman</h3>
+      </a>
       </div>
       <div class="work">
+        <a href="https://kneely13.github.io/unit-4-game">
         <img src="assets/images/grilled-korian-burger.jpg" alt="RPG Game">
-
         <h3>RPG Game</h3>
+      </a>
       </div>
       <div class="work">
         <img src="assets/images/grilled-korian-burger.jpg" alt="Trivia Game">
