--- a/portfolio.html
+++ b/portfolio.html
@@ -33,8 +33,8 @@
       </div>
       <div class="work">
         <a href="https://kneely13.github.io/unit-4-game">
-        <img src="assets/images/grilled-korian-burger.jpg" alt="RPG Game">
-        <h3>RPG Game</h3>
+        <img src="assets/images/crystal-game.jpg" alt="RPG Game">
+        <h3>Crystal Game</h3>
       </a>
       </div>
       <div class="work">
