added title cover and link

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,14 +38,16 @@
       </a>
       </div>
       <div class="work">
+        <a href="https://kneely13.github.io/TriviaGame">
         <img src="assets/images/grilled-korian-burger.jpg" alt="Trivia Game">
 
         <h3>Trivia Game</h3>
       </div>
       <div class="work">
-        <img src="assets/images/grilled-korian-burger.jpg" alt="Rutgers Info Widget">
+        <a href="https://kneely13.github.io/Gif-Search">
+        <img src="assets/images/airplane-gif-search-title-cover.gif" alt="Aircraft Gifs">
 
-        <h3>Rutgers Info Widget</h3>
+        <h3>Aircraft Gifs</h3>
       </div>
       <div class="work">
         <img src="assets/images/grilled-korian-burger.jpg" alt="Rock Paper Scissors">
