added trivia link

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
       </div>
       <div class="work">
         <a href="https://kneely13.github.io/TriviaGame">
-        <img src="assets/images/grilled-korian-burger.jpg" alt="Trivia Game">
+        <img src="assets/images/trivia.jpg" alt="Trivia Game">
 
         <h3>Trivia Game</h3>
       </div>
