--- a/portfolio.html
+++ b/portfolio.html
@@ -50,9 +50,10 @@
         <h3>Aircraft Gifs</h3>
       </div>
       <div class="work">
-        <img src="assets/images/grilled-korian-burger.jpg" alt="Rock Paper Scissors">
+        <a href="https://kneely13.github.io/Train-Scheduler/">
+        <img src="assets/images/Amtrak.jpg" alt="Train Scheduler">
 
-        <h3>Rock Paper Scissors</h3>
+        <h3>Train Schedule</h3>
       </div>
 
     </section>
