--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
         <h3>Aircraft Gifs</h3>
       </div>
       <div class="work">
-        <a href="https://kneely13.github.io/Train-Scheduler/">
+        <a href="https://kneely13.github.io/Train-Scheduler">
         <img src="assets/images/Amtrak.jpg" alt="Train Scheduler">
 
         <h3>Train Schedule</h3>
